--- a/navigation/ca_move_base/package.xml
+++ b/navigation/ca_move_base/package.xml
@@ -29,6 +29,7 @@
 
   <exec_depend>actionlib</exec_depend>
   <exec_depend>amcl</exec_depend>
+  <exec_depend>ca_planning</exec_depend>
   <exec_depend>carrot_planner</exec_depend>
   <exec_depend>clear_costmap_recovery</exec_depend>
   <exec_depend>dwa_local_planner</exec_depend>
