--- a/navigation/ca_vel_mux/config/yocs.yaml
+++ b/navigation/ca_vel_mux/config/yocs.yaml
@@ -12,7 +12,7 @@
 
 subscribers:
   - name:        "Navigation stack"
-    topic:       "cmd_vel/nav"
+    topic:       "cmd_vel/smooth"
     timeout:     0.5
     priority:    1
     short_desc:  "Navigation stack controller"
