Working version of semantic_slam with bagfile

--- a/docker/create_ros_melodic_gazebo9/Dockerfile
+++ b/docker/create_ros_melodic_gazebo9/Dockerfile
@@ -75,4 +75,8 @@ RUN apt-get update && \
     xargs -a ${DEPS_FILE} apt-get install -y
 RUN rm ${DEPS_FILE}
 
+# Deps for semantic SLAM
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
+
 USER $USER
