Add battery checker node

--- a/navigation/ca_behavior_tree/CMakeLists.txt
+++ b/navigation/ca_behavior_tree/CMakeLists.txt
@@ -31,7 +31,11 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(${PROJECT_NAME}_node src/main.cpp src/actions/movebase_client.cpp)
+add_executable(${PROJECT_NAME}_node
+  src/main.cpp
+  src/actions/movebase_client.cpp
+  src/actions/check_low_battery.cpp
+)
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME}_node ${BEHAVIOR_TREE_LIBRARY} ${catkin_LIBRARIES})
 ## Rename C++ executable without prefix
