Add battery plugin using brass_gazebo_battery (#241)
* Add plugin usign brass_gazebo_battery

* Fix typo in static test

* Decrease RTF of the static test

* Revert static test

* Add brass_gazebo_battery as dependency

* Improve instability tweaking link

--- a/ca_gazebo/CMakeLists.txt
+++ b/ca_gazebo/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(gazebo 9 REQUIRED)
 
 find_package(catkin REQUIRED
   COMPONENTS
+    brass_gazebo_battery
     ca_msgs
     gazebo_plugins
     gazebo_ros
