--- a/ca_gazebo/package.xml
+++ b/ca_gazebo/package.xml
@@ -10,6 +10,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>brass_gazebo_battery</build_depend>
   <build_depend>ca_msgs</build_depend>
   <build_depend>gazebo</build_depend>
   <build_depend>gazebo_plugins</build_depend>
@@ -20,6 +21,7 @@
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
 
+  <run_depend>brass_gazebo_battery</run_depend>
   <run_depend>ca_description</run_depend>
   <run_depend>ca_msgs</run_depend>
   <run_depend>gazebo</run_depend>
