--- a/navigation/ca_move_base/config/jps_global_planner_params.yaml
+++ b/navigation/ca_move_base/config/jps_global_planner_params.yaml
@@ -4,3 +4,4 @@ JumpPointSearchPlanner:
   # If the goal is in an obstacle, the planer will plan to the nearest point in the radius of default_tolerance, default 0.0
   # The area is always searched, so could be slow for big values
   default_tolerance: 0.0
+  debug: false
